# fm-plugin-reference

./: .gitignore  README.md  pyproject.toml
CHANGELOG/: CHANGELOG-0.1.md
src/plugins/fm/: refer-001_manager.yaml
src/plugins/fm/reference/: plugin.py
tests/: test_error_ctrl.py  test_fabric_data.py  test_fm_plugin.py  test_http_requests.py  test_port_data.py  test_port_data_dsp.py  test_port_data_usp.py  test_switch_data.py
tests/app/common/: basic_exceptions.py
tests/app/common/messages/: message.py
tests/app/common/utils/: fm_plugin_base.py  log.py
