[project]
name = "fm-plugin-reference"
version = "0.1.0"
description = "Plugin for hw-control package (for reference FM)"
authors = [{name = "NEC Corporation"}]
dependencies = [
    "requests",
    "pydantic",
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
    "pyright==1.1.335",
    "flake8",
    "PyYAML",
    "mypy>=1.15.0",
    "types-requests>=2.32.0.20250306",
    "black>=25.1.0",
]

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1600

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest -v --cov=src --cov-branch --cov-report=term-missing -v --cov-report=xml:coverage.xml"
flake8 = "flake8 src tests --max-line-length=120"
pyright.cmd = "pyright src tests"
pyright.env = {PYTHONPATH="src:tests"}
pylint = "pylint src tests"
mypy.cmd = "mypy src tests --explicit-package-bases"
mypy.env = {MYPYPATH="src:tests"}
black = "black --check src tests"
lint.composite = ["flake8", "pyright", "pylint", "mypy", "black"]
lint.keep_going = true
